# mmd-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: inspect.rs
src/: display.rs  lib.rs  pmx.rs
src/pmx/: bone.rs  display.rs  error.rs  joint.rs  material.rs  mod.rs  morph.rs  reader.rs  rigid_body.rs  settings.rs  types.rs  vertex.rs  weight_deform.rs
src/pmx/reader/: bone.rs  display.rs  header.rs  helpers.rs  joint.rs  material.rs  mod.rs  morph.rs  rigid_body.rs  surface.rs  texture.rs  vertex.rs
