[package]
name = "mmd"
version = "0.1.0"
authors = ["aankor <lambdasound@yandex.ru>"]
license = "BSD 2-Clause"
description = "Miku Miku Dance format parser for rust programming language"
edition = "2018"
homepage = "https://github.com/aankor/mmd-rs"
repository = "https://github.com/aankor/mmd-rs"
keywords = ["3d", "format", "mmd"]
categories = ["rendering::data-formats"]

[dependencies]
byteorder = "1.3.2"
encoding = "0.2"
fallible-iterator = "0.2"
enumflags2 = "0.6.0"
itertools = "0.8.0"
