[package]
name = "mmd"
version = "0.0.6"
authors = ["aankor <lambdasound@yandex.ru>"]
license = "BSD-2-Clause"
description = "Miku Miku Dance format parser for rust programming language"
edition = "2018"
homepage = "https://github.com/aankor/mmd-rs"
repository = "https://github.com/aankor/mmd-rs"
keywords = ["3d", "format", "mmd"]
categories = ["rendering::data-formats"]

[features]
default = ["arrayvec", "vek"]

[dependencies]
byteorder = "1.3.2"
encoding = "0.2"
enumflags2 = "0.6.0"
itertools = "0.10.0"
err-derive = "0.3.0"

arrayvec = { version = "0.5.2", optional = true }
vek = { version = "0.14.0", optional = true }